Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Removed child selectors in the CSS because MSIE doesn't understand them.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-