@@ -1392,19 +1392,19 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                     'order': 10,
                     },
             'logo': {'type':'Base Box',
-                    'title': 'CPS logo',
+                    'title': 'Portal logo',
                     'btype': 'logo',
                     'slot': 'top',
                     'order': 20,
                     },
             'menu': {'type':'Tree Box',
-                    'title': 'Main menu',
+                    'title': 'Tab menu',
                     'btype': 'menu',
                     'slot': 'top',
                     'order': 30,
                     },
             'breadcrumbs': {'type':'Base Box',
-                            'title': 'Bread crumbs',
+                            'title': 'Navigation path',
                             'btype': 'breadcrumbs',
                             'slot': 'top',
                             'order': 40,
@@ -1420,7 +1420,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                     },
 
             'conformance_statement': {'type': 'Base Box',
-                    'title': 'Conformance statement',
+                    'title': 'Conformance statements',
                     'btype': 'conformance_statement',
                     'slot': 'bottom',
                     'order': 20,
@@ -1449,7 +1449,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                             'box_skin': 'here/box_lib/macros/sbox',
                             },
             'navigation': {'type':'Tree Box',
-                        'title':'Navigation',
+                        'title':'Navigation tree menu',
                         'depth':1,
                         'contextual':1,
                         'slot':'left',
@@ -1473,7 +1473,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                             },
 
             'welcome' : {'type':'Text Box',
-                        'title': 'CPS Welcome',
+                        'title': 'Portal welcome message',
                         'slot':'center',
                         'order':10,
                         'btype':'default',
@@ -1493,7 +1493,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                             },
 
             'nav_folder' : {'type':'Tree Box',
-                            'title': 'Sub folder',
+                            'title': 'Sub folders',
                             'slot':'folder_view',
                             'order':10,
                             'box_skin': 'here/box_lib/macros/wbox2',
