@@ -6,6 +6,7 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
+- Renamed the default portal box titles to make them more meaningful.
 - Removed child selectors in the CSS because MSIE doesn't understand them.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
